# hms-accelerate-demo-PerfGenius

./: README.md  README_ZH.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/source/: PerfGeniusJNILib.cpp
app/src/main/java/com/huawei/perfgenius/jni/: PerfGeniusJNI.java
app/src/main/java/com/huawei/perfgenius/ui/: PerfGeniusApiActivity.java
app/src/main/res/layout/: activity_perfgenius_api.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
hrdelay/: README.md  README_ZH.md  build.gradle  local.properties  settings.gradle
hrdelay/app/: build.gradle
hrdelay/app/src/main/: AndroidManifest.xml
hrdelay/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
hrdelay/app/src/main/java/com/example/perfgenius_hrdelay/: MainActivity.java
hrdelay/app/src/main/res/layout/: activity_main.xml
hrdelay/app/src/main/res/values/: strings.xml
hrdelay/gradle/wrapper/: gradle-wrapper.properties
perfgenius/: PerfGenius.jks  README.md  README_ZH.md  build.gradle  settings.gradle
perfgenius/app/: build.gradle
perfgenius/app/src/main/: AndroidManifest.xml
perfgenius/app/src/main/cpp/: CMakeLists.txt
perfgenius/app/src/main/cpp/source/: PerfGeniusJNILib.cpp
perfgenius/app/src/main/java/com/huawei/perfgenius/jni/: PerfGeniusJNI.java
perfgenius/app/src/main/java/com/huawei/perfgenius/ui/: PerfGeniusApiActivity.java
perfgenius/app/src/main/res/layout/: activity_perfgenius_api.xml
perfgenius/app/src/main/res/values/: colors.xml  strings.xml
perfgenius/gradle/wrapper/: gradle-wrapper.properties
